source/client/app/styles/main.scss
$gray-lighter : #eee;
$body-bg:               white !default;
$navbar-inverse-color: white;
$gray:                   #666 !default;
$input-border: $gray !default;

//Tabs
$nav-tabs-border-color:                     #ddd !default;

$nav-tabs-link-hover-border-color:          $gray-lighter !default;

$nav-tabs-active-link-hover-bg:             $body-bg !default;
$nav-tabs-active-link-hover-color:          $gray !default;
$nav-tabs-active-link-hover-border-color:   #ddd !default;

$nav-tabs-justified-link-border-color:            #ddd !default;
$nav-tabs-justified-active-link-border-color:     $body-bg !default;

@import "theme/variables";

$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
$fa-font-path: "../bower_components/font-awesome/fonts/";

// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
@import "font-awesome/scss/font-awesome.scss";
// endbower

//@import "theme/bootswatch";

.btn {
  text-transform: none;
}

.fa-2x {
  vertical-align: middle;
}

body {
  padding-top: 70px;
}
html,body{
  height:100%;
}
html.body-background-image {
  background: url('../images/kudos_background.png') no-repeat center center fixed;
  background-size: cover;
  background-color: #55D8CE;
  body{
    background-color: transparent;
  }
}

html body {
  background-color: $body-bg;
}

@media screen and (max-width: $screen-xs-max) {
  html.body-background-image {
    background: url('../images/kudos_background_mobile.png') no-repeat center center fixed;
    background-position-y:300px;
    background-color: #55D8CE;
    body{
      background-color: transparent;
    }
  }
}

.form-signin{
  width:350px;
  input, select{
    background-color: white;
  }
  margin-left: auto;
  margin-right: auto;
}

.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

.circle-border {
  //border: 6px solid $nav-primary !important;
  border-radius: 50%;
  background-color: $gray-lightest;
}

@keyframes fadeyFade {
  from { opacity: 0; }
  to   { opacity: 1; }
}

@-webkit-keyframes fadeyFade {
  from { opacity: 0; }
  to   { opacity: 1; }
}

.fadeyFade {
  -webkit-animation: fadeyFade 2s;
  -webkit-animation-fill-mode: forwards;

  animation: fadeyFade 2s;
  animation-fill-mode: forwards;
}

.userHolder {
  transform: scale(1,1);
  transition: all 0.1s ease-in;
  position: relative;
  display: block;
}

.userHolder:hover {
  transform: scale(1.2,1.2);
  z-index: 2;
}

@media screen and (max-width: $screen-xs-max) {
  .kudosTitle {
    font-size: 12vw !important;
  }
}

@media screen and (min-width: $screen-xs-max)  {
  .kudosTitle {
    font-size: 8em !important;
  }
}

.kudosCategoryType{
  .kudosCategoryName {
    @extend h4;
    @extend .text-center;
    a {
      color: $panel-primary-text;
    }

  }
  .panel{
    margin-bottom:0;
    height: 300px;
  }

  .panel-heading{
    min-height: 100px;
    display: flex;
    align-items: center;
    justify-content: center;

  }
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

.footer {
  margin-top: 20px;
}

/* Custom page header */
.header {
  margin-bottom: 10px;
  .navbar-form{
    padding-top:4px;
  }
  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.kudosComment {
  white-space: pre-wrap;
}

.container-narrow > hr {
  margin: 30px 0;
}

  /* Main marketing message and sign up button */
  .jumbotron {
    text-align: center;
    border-bottom: 1px solid #e5e5e5;

    .btn {
      font-size: 21px;
      padding: 14px 24px;
    }
  }

  /* Supporting marketing content */
  .marketing {
    margin: 40px 0;

    p + h4 {
      margin-top: 28px;
    }
  }

  .circle-border-small{
    @extend .circle-border;
    border-width:2px !important;
  }

  .circle-border-micro {
    @extend .circle-border;
    border-width:1px !important;
  }

  /* Responsive: Portrait tablets and up */
  @media screen and (min-width: 768px) {
    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
      padding-left: 0;
      padding-right: 0;
    }
    /* Space out the masthead */
    .header {
      margin-bottom: 30px;
    }
    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
      border-bottom: 0;
    }
  }

@for $i from 1 through 6 {
  .topmargin-#{$i*5} { margin-top: 5px * $i; }
  .bottommargin-#{$i*5} { margin-bottom: 5px * $i; }
  .leftmargin-#{$i*5} { margin-left: 5px * $i; }
  .rightmargin-#{$i*5} { margin-right: 5px * $i; }
}

div.circle-avatar{

  -webkit-backface-visibility: hidden;
  -webkit-transform: translateZ(0) scale(1.0, 1.0);

  /* make it responsive */
  max-width: 100%;
  width:100%;
  height:auto;
  display:block;
  /* div height to be the same as width*/
  padding-top:100%;

  /* make it a cirkle */
  border-radius:50%;

  /* Centering on image`s center*/
  background-position-y: center;
  background-position-x: center;
  background-repeat: no-repeat;

  /* it makes the clue thing, takes smaller dimention to fill div */
  background-size: cover;

  /* it is optional, for making this div centered in parent*/
  margin: 0 auto;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.navbar .circle-avatar {
  width: 32px !important;
  height: 32px !important;
  //padding: 0px !important;
  //margin-top: 15px !important;
}

div.circle-avatar.small-circle-avatar {
  min-width: 32px;
  min-height: 32px;
  //padding: 0px !important;
  //margin-top: 15px !important;
}

.navbar-brand {
  color: #fff !important;
  text-transform: capitalize;
  font-weight: bolder;
  font-size:24px;

  .highlight-letters {
    color: $brand-primary !important;
  }
}

.navbar input {
  background-color: #ffffff;
}

.tab-holder {
  background-color: $gray-warm-light;
  padding: 0px 3px 1px 3px;
}

.tab-holder .tab-content {
  background-color: #ffffff;
}

.tab-holder .tab-pane {
  padding: 20px 5px 10px 5px;
}

.tab-holder .kudos-footer {
  background-color: $gray-warm-light;
  padding: 2px;
}

.kudos-text {
  padding-bottom: 10px;
}

.kudos-comment-add {
  margin-top:5px;
}

.kudos-footer-info {
  margin-left: 10px;
}

@media (max-width: $screen-xs-max) {
  .pull-xs-left {
    float: left;
  }
  .pull-xs-right {
    float: right;
  }
}

@media (min-width: $screen-sm-min) {
  .pull-sm-left {
    float: left;
  }
  .pull-sm-right {
    float: right;
  }
}

@media (min-width: $screen-md-min)  {
  .pull-md-left {
    float: left;
  }
  .pull-md-right {
    float: right;
  }
}

@media (min-width: $screen-lg-min) {
  .pull-lg-left {
    float: left;
  }
  .pull-lg-right {
    float: right;
  }
}

a.fa{
  text-decoration: none;
}

.userKudosType {
  padding-top: 10px;
  padding-bottom: 5px;
  border-bottom: $gray-warm-light solid 2px;
}

